build: removes HytaleServer.jar from compilation to make build size smaller