@@ -1,53 +1,30 @@
 plugins {
     id 'java'
     id 'com.gradleup.shadow' version '9.3.1'
-    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.3'
 }
 
-import org.gradle.internal.os.OperatingSystem
+group = 'org.tblack'
+version = (project.findProperty('version') ?: '0.1.1').toString()
 
-ext {
-    if (project.hasProperty('hytale_home')) {
-        hytaleHome = project.findProperty('hytale_home')
-    }
-    else {
-        def os = OperatingSystem.current()
-        if (os.isWindows()) {
-            hytaleHome = "${System.getProperty("user.home")}/AppData/Roaming/Hytale"
-        }
-        else if (os.isMacOsX()) {
-            hytaleHome = "${System.getProperty("user.home")}/Library/Application Support/Hytale"
-        }
-        else if (os.isLinux()) {
-            hytaleHome = "${System.getProperty("user.home")}/.var/app/com.hypixel.HytaleLauncher/data/Hytale"
-            if (!file(hytaleHome).exists()) {
-                hytaleHome = "${System.getProperty("user.home")}/.local/share/Hytale"
-            }
-        }
-    }
+def patchline = (project.findProperty('patchline') ?: 'release').toString()
+
+def hytaleHome = project.findProperty('hytale_home')
+if (hytaleHome == null || hytaleHome.toString().trim().isEmpty()) {
+    def userHome = System.getProperty('user.home')
+    hytaleHome = "${userHome}/AppData/Roaming/Hytale"
+}
+hytaleHome = hytaleHome.toString().replace('\\', '/')
+
+def serverJar = file("${hytaleHome}/install/${patchline}/package/game/latest/Server/HytaleServer.jar")
+if (!serverJar.exists()) {
+    throw new GradleException("HytaleServer.jar not found at: ${serverJar.absolutePath.replace('\\','/')}")
 }
 
-if (!project.hasProperty('hytaleHome')) {
-    throw new GradleException('Hytale não foi detectado automaticamente. Defina hytale_home.')
-}
-else if (!file(project.findProperty('hytaleHome')).exists()) {
-    throw new GradleException("Falha ao encontrar Hytale em ${project.findProperty('hytaleHome')}")
-}
+def javaVer = (project.findProperty('java_version') ?: '25').toString().toInteger()
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(java_version)
-    withSourcesJar()
-    withJavadocJar()
-}
-
-javadoc {
-    options.addStringOption('Xdoclint:-missing', '-quiet')
-}
-
-sourceSets {
-    main {
-        compileClasspath += files("libs/HyUI-0.6.0-all.jar")
-        runtimeClasspath += files("libs/HyUI-0.6.0-all.jar")
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(javaVer)
     }
 }
 
@@ -55,63 +32,40 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    shade
+}
+
 dependencies {
-    implementation files("$hytaleHome/install/$patchline/package/game/latest/Server/HytaleServer.jar")
-    implementation files("libs/HyUI-0.6.0-all.jar")
+    compileOnly files(serverJar)
+    compileOnly files("libs/HyUI-0.6.0-all.jar")
+    shade files("libs/HyUI-0.6.0-all.jar")
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += ['--enable-preview']
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += ['--enable-preview']
+}
+
+jar {
+    enabled = false
 }
 
 shadowJar {
     archiveBaseName.set(rootProject.name)
     archiveClassifier.set("")
     archiveVersion.set(project.version.toString())
+    configurations = [project.configurations.shade]
 }
 
 tasks.build {
     dependsOn shadowJar
-}
-
-tasks.register('updatePluginManifest') {
-    def manifestFile = file('src/main/resources/manifest.json')
-    doLast {
-        if (!manifestFile.exists()) {
-            throw new GradleException("manifest.json não encontrado!")
-        }
-        def manifestJson = new groovy.json.JsonSlurper().parseText(manifestFile.text)
-        manifestJson.Version = version
-        manifestJson.IncludesAssetPack = includes_pack.toBoolean()
-        manifestFile.text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(manifestJson))
-    }
-}
-
-tasks.named('processResources') {
-    dependsOn 'updatePluginManifest'
-}
-
-def serverRunDir = file("$projectDir/run")
-if (!serverRunDir.exists()) {
-    serverRunDir.mkdirs()
-}
-
-def createServerRunArguments(String srcDir) {
-    def programParameters = '--allow-op --disable-sentry --assets="' + "${hytaleHome}/install/$patchline/package/game/latest/Assets.zip" + '"'
-    def modPaths = []
-    if (includes_pack.toBoolean()) {
-        modPaths << srcDir
-    }
-    if (load_user_mods.toBoolean()) {
-        modPaths << "${hytaleHome}/UserData/Mods"
-    }
-    if (!modPaths.isEmpty()) {
-        programParameters += ' --mods="' + modPaths.join(',') + '"'
-    }
-    return programParameters
-}
-
-idea.project.settings.runConfigurations {
-    'HytaleServer'(org.jetbrains.gradle.ext.Application) {
-        mainClass = 'com.hypixel.hytale.Main'
-        moduleName = project.idea.module.name + '.main'
-        programParameters = createServerRunArguments(sourceSets.main.java.srcDirs.first().parentFile.absolutePath)
-        workingDirectory = serverRunDir.absolutePath
-    }
 }
